--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+}
+html {
+    a:hover {
+        opacity: 0.5;
+    }
+}
+body {
+    // width: 100%;
+    // height: 100vh;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+}
