--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -5,7 +5,8 @@
 <main class="main">
 
 <div class="top">
-    <h1>top</h1>
+    <!-- <h1>top</h1> -->
+    <img src="assets/header.jpg" alt="header">
 </div>
 <div class="promo">
     <h1>promo</h1>
