--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -30,10 +30,16 @@
     <h1>scheme</h1>
 </div>
 <div class="reviews">
-    <h1>reviews</h1>
+    <!-- <h1>reviews</h1> -->
+    <!-- <div ng-init="coords=[55.21, 34.30];center=[55.21, 34.30];zoom=10">
+        <yandex-map center="center" zoom="zoom">
+            <ymap-marker coordinates="coords"></ymap-marker>
+        </yandex-map>
+    </div> -->
 </div>
 <div class="map">
-    <h1>map</h1>
+    <!-- <h1>map</h1> -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d402.6419529390313!2d39.72470179805476!3d47.24315989991038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e3b9b3ff95edd7%3A0x3df435d2d9858d18!2z0YPQuy4g0J3QsNC90YHQtdC90LAsIDE0ONCQLCDQoNC-0YHRgtC-0LIt0L3QsC3QlNC-0L3Rgywg0KDQvtGB0YLQvtCy0YHQutCw0Y8g0L7QsdC7LiwgMzQ0MDM4!5e0!3m2!1sru!2sru!4v1609074507867!5m2!1sru!2sru" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 
 </main>
@@ -41,3 +47,5 @@
 <footer class="footer">
     <h1>footer</h1>
 </footer>
+
+<!-- <script src="./angular-ymaps.js"></script> -->
