add privacy components

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,16 @@
+
+<div class="header-background"></div>
+
 <header class="header">
-    <h1>header</h1>
+    <h1>Геодезические услуги</h1>
+    <h1 class="outline">Геодезические услуги</h1>
+    <img src="assets/logo.png" alt="logo">
 </header>
+
+<div class="hr"></div>
+
 <!-- ------------------------------ -->
+
 <main class="main">
 
 <div class="top">
@@ -51,9 +60,24 @@
 </div>
 
 </main>
+
 <!-- ------------------------------ -->
+
 <footer class="footer">
-    <h1>footer</h1>
+    <!-- <h1>footer</h1> -->
+    <div class="director">
+        <p>Директор:</p>
+        <h4>Кочкин Алексей Евгеньевич</h4>
+        <br>
+        <p>Юридический адрес:</p>
+        <p>&nbsp;&nbsp;&nbsp;344010, РФ, РО, г.Ростов-на-Дону, </p>
+        <p>&nbsp;&nbsp;&nbsp;ул.Нансена, д.148а, офис 109</p>
+        <p>ОГРН: 1126194004100</p>
+        <p>ИНН: 6168059100</p>
+    </div>
+    <div class="privacy">
+        <a href="privacy">Политика конфиденциальности</a>
+    </div>
 </footer>
 
 <!-- <script src="./angular-ymaps.js"></script> -->
