--- a/src/app/privacy/privacy.component.html
+++ b/src/app/privacy/privacy.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="privacy">
 
-    <h1>Политика конфиденциальности!</h1>
+    <h1 id="politics">Политика конфиденциальности!</h1>
 
     <p>1. Общие положения</p>
     <p>1.1. Настоящие Положение является официальным документом Администрации сайта, на котором оно размещено и определяет порядок обработки и защиты информации о физических лицах, пользующихся услугами интернет-сайта (далее - Сайт) и его сервисов (далее - Пользователи).</p>
