--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -32,19 +32,38 @@
 <div class="why-are-we">
     <h1>why-are-we</h1>
 </div>
-<div class="form">
-    <h1>form</h1>
+
+<div class="consultation">
+
+    <form method="GET" action="/" class="form">
+
+        <h1>Заполните форму</h1>
+
+        <h4>чтобы получить бесплатную<br>
+            консультацию специалиста</h4>
+
+        <!-- <div class="input"> -->
+            <input type="hidden" name="login" id="login" value="test" />
+
+            <input type="text" placeholder="Ваше имя*" name="name" id="name" maxlength="100" />
+            
+            <input type="text" placeholder="Ваш телефон*" name="phone" id="phone" maxlength="100" />
+            
+            <input type="text" placeholder="Ваш Email" name="email" id="email" maxlength="100" />
+                
+            <button class="btn" type="submit">Получить консультацию</button>
+        <!-- </div> -->
+
+    </form>
+    <img class="instrument" src="assets/instrument.png" alt="instrument">
+
 </div>
+
 <div class="scheme">
     <h1>scheme</h1>
 </div>
 <div class="reviews">
-    <!-- <h1>reviews</h1> -->
-    <!-- <div ng-init="coords=[55.21, 34.30];center=[55.21, 34.30];zoom=10">
-        <yandex-map center="center" zoom="zoom">
-            <ymap-marker coordinates="coords"></ymap-marker>
-        </yandex-map>
-    </div> -->
+    <h1>reviews</h1>
 </div>
 <div class="map">
     <!-- <h1>map</h1> -->
@@ -66,9 +85,9 @@
 <footer class="footer">
     <!-- <h1>footer</h1> -->
     <div class="director">
-        <p>Директор:</p>
+        <!-- <p>Директор:</p>
         <h4>Кочкин Алексей Евгеньевич</h4>
-        <br>
+        <br> -->
         <p>Юридический адрес:</p>
         <p>&nbsp;&nbsp;&nbsp;344010, РФ, РО, г.Ростов-на-Дону, </p>
         <p>&nbsp;&nbsp;&nbsp;ул.Нансена, д.148а, офис 109</p>
@@ -77,6 +96,7 @@
     </div>
     <div class="privacy">
         <a href="privacy">Политика конфиденциальности</a>
+        <!-- <a routerLink="privacy" queryParams="d" fragment="politics" routerLinkActive="activebutton">Политика конфиденциальности</a> -->
     </div>
 </footer>
 
