--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,9 +2,12 @@
 <div class="header-background"></div>
 
 <header class="header">
-    <h1>Геодезические услуги</h1>
-    <h1 class="outline">Геодезические услуги</h1>
-    <img src="assets/logo.png" alt="logo">
+    <h1 class="services">Геодезические услуги</h1>
+    <span class="ooo">ООО "Геометрикс"</span>
+    <p class="foundation">Основана в 2012 году</p>
+    <img class="logo" src="assets/logo.png" alt="logo">
+    <p class="phone">+79081903754</p>
+    <p class="whatsapp">+79044478596<br>&nbsp;&nbsp;&nbsp;whatsapp</p>
 </header>
 
 <div class="hr"></div>
@@ -85,9 +88,9 @@
 <footer class="footer">
     <!-- <h1>footer</h1> -->
     <div class="director">
-        <!-- <p>Директор:</p>
+        <p>Директор:</p>
         <h4>Кочкин Алексей Евгеньевич</h4>
-        <br> -->
+        <br>
         <p>Юридический адрес:</p>
         <p>&nbsp;&nbsp;&nbsp;344010, РФ, РО, г.Ростов-на-Дону, </p>
         <p>&nbsp;&nbsp;&nbsp;ул.Нансена, д.148а, офис 109</p>
