--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -23,9 +23,52 @@
 <div class="promo">
     <h1>promo</h1>
 </div>
+
 <div class="about-photo">
-    <h1>about-photo</h1>
+    <p>Тут какой-то текст</p>
+    <div class="container">
+        <div class="card card1">
+            <div class="face face1">
+                <div class="content">
+                    <img src="assets/about-photo-one.jpg" alt="one">
+                    <h3>Топографическая съемка</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Топографическая съемка — наиболее востребованный вид геодезических работ. Потребность в ней возникает при обновлении топокарт, изысканиях, составлении генеральных планов и рабочих чертежей, а также при создании проектов ландшафтного дизайна и решении вопросов вертикальной планировки.</p>	
+                </div>
+            </div>
+        </div>
+        <div class="card card2">
+            <div class="face face1">
+                <div class="content">
+                    <img src="assets/about-photo-two.jpg" alt="two">
+                    <h3>Сопровождение строительства</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. Наши сотрудники максимально полно и достоверно отобразят всю текущую ситуацию на строительном объекте.</p>	
+                </div>
+            </div>
+        </div>
+        <div class="card card3">
+            <div class="face face1">
+                <div class="content">
+                    <img src="assets/about-photo-three.jpg" alt="three">
+                    <h3>Наблюдение за осадками</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Наблюдения за деформациями или геодезический мониторинг зданий и сооружений  подразумевает своевременное отслеживание опасных величин деформаций и оползневых процессов, выявление причин их появления и прогнозирование дальнейшего развития процессов.</p>	
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <div class="about-text">
     <h1>about-text</h1>
 </div>
