--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -3,6 +3,7 @@ $yellow: rgb(212,158,74);
 $dark: rgb(47,69,91);
 $white: white;
 $height-header: 150px;
+$height-header-min: 100px;
 $height-footer: 200px;
 $height-block: 800px;
 $z-index-header: 10;
@@ -27,10 +28,18 @@ h1 {
 .header-background {
     position: fixed;
     top: 0;
-    background: rgba(255,196,14,0.6);
+    background: rgba(255,196,14,0.8);
     width: 100%;
     height: $height-header;
     z-index: $z-index-header;
+}
+.hr {
+    z-index: $z-index-header;
+    width: 100%;
+    border-top: 1px solid white;
+    border-bottom: 1px solid black;
+    position: fixed;
+    top: $height-header;
 }
 .header {
     height: $height-header;
@@ -73,20 +82,20 @@ h1 {
 }
 @media (max-width: 600px) {
     .header {
-        img {
+        .logo {
             left: 20px;
         }
-        h1 {
+        .services {
             left:150px;
-        }
+        }        
     }
 }
 @media (max-width: 475px) {
     .header {
-        img {
+        .logo {
             left: 5px;
         }
-        h1 {
+        .services {
             display: none;
         }
     }
@@ -99,15 +108,36 @@ h1 {
         }
     }
 }
-
-.hr {
-    z-index: $z-index-header;
-    width: 100%;
-    border-top: 1px solid white;
-    border-bottom: 1px solid black;
-    position: fixed;
-    top: $height-header;
+@media (max-height: 700px) {
+    .header {
+        .ooo, .foundation {
+            display: none;
+        }
+        .services {
+            top: 30px;
+        }
+        .phone {
+            top: 10px;
+        }
+        .whatsapp {
+            top: 45px;
+        }        
+        height: $height-header-min;
+    }
+    .header-background {
+        height: $height-header-min;
+    }
+    .hr {
+        top: $height-header-min;
+    }
+    @media (max-width: 700px) {
+        .services {
+            display: none;
+        }
+    }
 }
+
+
 
 
 //----------------------------------
@@ -133,7 +163,8 @@ h1 {
 // .promo
 // ------------------
 .promo {
-    height: $height-block;
+    // height: $height-block;
+    height: 400px;
     background: $light-yellow;
     color: $white;
 }
@@ -286,7 +317,7 @@ h1 {
         position: absolute;
         // left: 200px;
         // top: 100px;
-        background: rgba(158, 158, 158, 0.4);
+        background: rgba(158, 158, 158, 0.6);
         width: 300px;
         height: 450px;
         padding: 20px;
