Добавил адаптивности сайту

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -18,14 +18,16 @@
 
 <div class="top">
     <!-- <h1>top</h1> -->
-    <img src="assets/header.jpg" alt="header">
+    <img src="assets/top++.jpg" alt="header">
+    <h3>Получите комплексный отчёт</h3>
+    <h1>О ГЕОДЕЗИЧЕСКИХ ИЗЫСКАНИЯХ</h1>
 </div>
 <div class="promo">
     <h1>promo</h1>
 </div>
 
 <div class="about-photo">
-    <p>Тут какой-то текст</p>
+    <p>Мы предлагаем:</p>
     <div class="container">
         <div class="card card1">
             <div class="face face1">
@@ -70,10 +72,34 @@
 </div>
 
 <div class="about-text">
-    <h1>about-text</h1>
+    <h1>Виды работ:</h1>
+    <div class="about-text-one">
+        <h3>Межевание</h3>
+        <p>Комплекс мероприятий, который обеспечит быстрое, квалифицированное межевание земельного участка: уточнение границ, раздел, перераспределение, объединение, образование земельных участков. Опыт и профессиональные навыки наших специалистов гарантируют точность всех показателей.</p>
+    </div>
+    <div class="about-text-two">
+        <h3>Топоплан</h3>
+        <p>Топографическая съемка местности – комплекс мероприятий в составе инженерных изысканий, направленный на создание планов местности или топографических карт для дальнейшего их использования строителями, военными, туристами и т.д. Выполнение топографической съемки, как правило, осуществляется на месте и результатом этого вида деятельности является топоплан определенного масштаба.</p>
+    </div>
+    <div class="about-text-three">
+        <h3>Сопровождение</h3>
+        <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. «Геометрикс» предлагает вам комплексный подход к ее созданию. Все заботы о геодезии мы возьмем на себя!</p>
+    </div>
 </div>
 <div class="reason">
-    <h1>reason</h1>
+    <h1>Почему именно мы?</h1>
+    <div class="reason-one">
+        <h3>Почему мы?</h3>
+        <p>Потому что</p>
+    </div>
+    <div class="reason-two">
+        <h3>Почему мы?</h3>
+        <p>Потому что</p>
+    </div>
+    <div class="reason-three">
+        <h3>Почему мы?</h3>
+        <p>Потому что</p>
+    </div>
 </div>
 <div class="why-are-we">
     <h1>why-are-we</h1>
