--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -90,21 +90,7 @@
     </div>
 </div>
 
-<div class="about-text">
-    <h1>Виды работ:</h1>
-    <div class="about-text-one">
-        <h3>Межевание</h3>
-        <p>Комплекс мероприятий, который обеспечит быстрое, квалифицированное межевание земельного участка: уточнение границ, раздел, перераспределение, объединение, образование земельных участков. Опыт и профессиональные навыки наших специалистов гарантируют точность всех показателей.</p>
-    </div>
-    <div class="about-text-two">
-        <h3>Топоплан</h3>
-        <p>Топографическая съемка местности – комплекс мероприятий в составе инженерных изысканий, направленный на создание планов местности или топографических карт для дальнейшего их использования строителями, военными, туристами и т.д. Выполнение топографической съемки, как правило, осуществляется на месте и результатом этого вида деятельности является топоплан определенного масштаба.</p>
-    </div>
-    <div class="about-text-three">
-        <h3>Сопровождение</h3>
-        <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. «Геометрикс» предлагает вам комплексный подход к ее созданию. Все заботы о геодезии мы возьмем на себя!</p>
-    </div>
-</div>
+
 <div class="reason">
     <h1>Почему именно мы?</h1>
     <div class="reason-one">
@@ -119,7 +105,35 @@
         <h3>Почему мы?</h3>
         <p>Потому что</p>
     </div>
+    <div class="reason-img-one">
+        <img src="assets/reason-img-one.jpg" alt="reason-img-one">
+    </div>
+    <div class="reason-img-two">
+        <img src="assets/reason-img-two.jpg" alt="reason-img-two">
+    </div>
+    <div class="reason-img-three">
+        <img src="assets/reason-img-three.jpg" alt="reason-img-three">
+    </div>
 </div>
+
+<div class="about-text">
+<div class="box">
+    <h1>Виды работ:</h1>
+    <div class="about-text-one">
+        <h3>Межевание</h3>
+        <p>Комплекс мероприятий, который обеспечит быстрое, квалифицированное межевание земельного участка: уточнение границ, раздел, перераспределение, объединение, образование земельных участков. Опыт и профессиональные навыки наших специалистов гарантируют точность всех показателей.</p>
+    </div>
+    <div class="about-text-two">
+        <h3>Топоплан</h3>
+        <p>Топографическая съемка местности – комплекс мероприятий в составе инженерных изысканий, направленный на создание планов местности или топографических карт для дальнейшего их использования строителями, военными, туристами и т.д. Выполнение топографической съемки, как правило, осуществляется на месте и результатом этого вида деятельности является топоплан определенного масштаба.</p>
+    </div>
+    <div class="about-text-three">
+        <h3>Сопровождение</h3>
+        <p>Геодезическое сопровождение строительства подразумевает под собой комплекс мероприятий по разбивке и контролю монтажа конструктивных элементов  на определенном строительном объекте. «Геометрикс» предлагает вам комплексный подход к ее созданию. Все заботы о геодезии мы возьмем на себя!</p>
+    </div>
+</div>
+</div>
+
 <div class="why-are-we">
     <h1>why-are-we</h1>
 </div>
